Fix overflow showing up on desktop for transaction list

--- a/static/src/components/RecurrenceList/styles.scss
+++ b/static/src/components/RecurrenceList/styles.scss
@@ -18,7 +18,7 @@
 }
 
 :local(.mainTable) {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 :local(.largeColumn) {
   width: 150px;
